@@ -16,10 +16,20 @@ rpm_release="1"
 AM_INIT_AUTOMAKE(ktoblzcheck, "${VERSION_MAJOR}.${VERSION_MINOR}")
 AM_CONFIG_HEADER(config.h)
 
+# shared library version numbers
+LIBKTOBLZCHECK_CURRENT=4
+LIBKTOBLZCHECK_AGE=3
+LIBKTOBLZCHECK_REVISION=0
+LIBKTOBLZCHECK_EFFECTIVE="`echo \$(($LIBKTOBLZCHECK_CURRENT-LIBKTOBLZCHECK_AGE))`"
+
 AC_SUBST(VERSION_MAJOR)
 AC_SUBST(VERSION_MINOR)
 AC_SUBST(rpm_release)
 # rpm_version is set by the VERSION in AM_INIT_AUTOMAKE
+AC_SUBST(LIBKTOBLZCHECK_CURRENT)
+AC_SUBST(LIBKTOBLZCHECK_AGE)
+AC_SUBST(LIBKTOBLZCHECK_REVISION)
+AC_SUBST(LIBKTOBLZCHECK_EFFECTIVE)
 
 #############################################################
 #
@@ -46,6 +56,8 @@ AC_C_LONG_LONG
 # Disable static libraries by default. Modern distros want the shared
 # ones.
 AC_DISABLE_STATIC
+
+AC_LIBTOOL_WIN32_DLL
 AC_PROG_LIBTOOL
 
 #############################################################
@@ -61,7 +73,7 @@ case "$OS_TYPE" in
     	;;
     windows)
 	ACX_WINDOWS_PATHS
-        ktoblzcheck_libs='-L$(top_builddir)/src/lib -lktoblzcheck32 -L/mingw/lib -L$(WIN_PATH_SYSTEM_MINGW)'
+        ktoblzcheck_libs='-L$(top_builddir)/src/lib -lktoblzcheck -L/mingw/lib -L$(WIN_PATH_SYSTEM_MINGW)'
 	ktoblzcheck_includes='-I$(top_srcdir)/src/include'
     	;;
 esac
@@ -133,22 +145,23 @@ ACX_COMPILE_WARN
 #
 # Output
 #
-AC_OUTPUT( \
-  Makefile \
-  Doxyfile \
-  ktoblzcheck.spec \
-  ktoblzcheck.iss \
-  ktoblzcheck.pc \
-  macros/Makefile \
-  src/Makefile \
-  src/bankdata/Makefile \
-  src/bankdata/online_update.pl \
-  src/bankdata/bundesbank.pl \
-  src/bin/Makefile \
-  src/include/Makefile \
-  src/lib/Makefile \
-  src/lib/ressource.rc \
-  src/python/Makefile \
-  doc/Makefile \
+AC_CONFIG_FILES([
+  Makefile
+  Doxyfile
+  ktoblzcheck.spec
+  ktoblzcheck.iss
+  ktoblzcheck.pc
+  macros/Makefile
+  src/Makefile
+  src/bankdata/Makefile
+  src/bankdata/online_update.pl
+  src/bankdata/bundesbank.pl
+  src/bin/Makefile
+  src/include/Makefile
+  src/lib/Makefile
+  src/lib/ressource.rc
+  src/python/Makefile
+  doc/Makefile
   doc/mainpage.doxygen
-)
+])
+AC_OUTPUT
