@@ -33,14 +33,15 @@ Name: "doc"; Description: "{cm:DocFiles}"; Types: full
 
 [Files]
 ; The main DLL
-Source: "src\lib\ktoblzcheck32.dll"; DestDir: "{win}"; Flags: sharedfile; Components: main
+Source: "win32-tmp\bin\libktoblzcheck-@LIBKTOBLZCHECK_EFFECTIVE@.dll"; DestDir: "{win}"; Flags: sharedfile promptifolder replacesameversion; Components: main
+Source: "win32-tmp\bin\libktoblzcheck-@LIBKTOBLZCHECK_EFFECTIVE@.dll"; DestDir: "{win}"; DestName: "ktoblzcheck32.dll"; Flags: sharedfile promptifolder replacesameversion; Components: main
 Source: "win32-tmp\bin\ktoblzcheck.exe"; DestDir: "{app}"; Components: main
 
 ; The data files
 Source: "win32-tmp\data\*"; DestDir: "{app}\data"; Flags: ignoreversion; Components: main
 
-; The lib file for linking against it
-Source: "src\lib\ktoblzcheck32.lib"; DestDir: "{app}\lib"; Flags: sharedfile; Components: devel
+;; The lib file for linking against it
+;Source: "win32-tmp\lib\libktoblzcheck.la"; DestDir: "{app}\lib"; Flags: sharedfile; Components: devel
 
 ; The headers. 
 Source: "win32-tmp\include\*"; DestDir: "{app}\include"; Flags: ignoreversion recursesubdirs; Components: devel
